--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,17 +1,20 @@
 .header{
-    font-size: 25px;
+    font-size: 20px;
     color: gray;
 }
 .header span{
-    font-size: 10px;
+    font-size: 7px;
+}
+.sideitems{
+    background-color: white;
 }
 .sideitems a, .arrow{
     color: gray;
-    font-size: 25px;
+    font-size: 18px;
 }
 .main{
-    padding: 12px;
-    width: 300px;
+    padding: 8px;
+    width: 227px;
     border-radius: 10px;
     display: flex;
     align-items: center;
@@ -33,25 +36,28 @@
     background-image: url(people.svg);
     background-repeat: no-repeat;
     background-size: cover;
-    height: 450px;
-    width: 700px;
+    height: 300px;
+    width: 500px;
     border-radius: 20px;
 }
-.container{
+body{
     background-color: rgb(242, 245, 245);
 }
 .date{
     background-color: white;
-    width: 230px;
+    width: 170px;
     border-radius: 10px;
+    font-size: 15px;
     padding: 5px;
+    font-weight: 500;
 }
 .box{
-    border-radius: 30px;
-    margin-bottom: 70px;
-    width: 300px;
-    height: 180px;
-    padding: 30px;
+    border-radius: 20px;
+    width: 250px;
+    height: 130px;
+    margin-bottom: 40px;
+    font-size: 15px;
+    padding: 15px;
     color: white;
 }
 .box ul{
